# verifiers-textworld-cooking-env

./: README.md  data.py  pyproject.toml  textworld_cooking_env.py
outputs/evals/textworld_cooking_env--Qwen--Qwen3-0.6B/b65243b8/: metadata.json  results.jsonl
outputs/evals/textworld_cooking_env--Qwen--Qwen3-4B-Thinking-2507/33e4dc46/: metadata.json  results.jsonl
scripts/: README.md  run_manual_textworld_cooking.py
