[project]
name = "textworld_cooking_env"
description = "TWCooking Environment from TALES Suit and GATA paper"
tags = ["games", "multi-turn", "textworld", "cooking", "interactive-fiction", "xml", "train", "eval"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8.post2",
    "gymnasium>=1.0.0",
    "textworld[pddl]>=1.6.2rc3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["textworld_cooking_env.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 3
